2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* type_traits.h: select appropriate TR1 type_traits implementation
	or use own, if not good one found [initial release].

2007-02-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* tfstream: fstream-like interface to unique temporary file;
	file generated from template with mkstemp [POSIX 1003.1-2001];
	template only, library not required; current implementation work
	only with STLport with extentions enabled.

2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* args.cc:  explicitly add stdexcept header.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libmisc: library naming scheme changed.

2002-08-03  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* CyrMoney.cc: fix not cleared eof flag in strstreams.

	* libmisc: library renamed.

	* libmisc: version 1.8.1.

	* libmisc: library come to 'explore' source tree.

2001-09-20  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux change location; it now in misc catalogs. This done to satisfy
	Windows requirements---Windows fails when see word 'aux'.
	
2001-08-13  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* args.cc (Repository): Change in option style: -option=value now.

2001-08-09  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux: Version 1.7.0
	
	* args.cc, args.h (Repository): Experimental arguments parser.

2001-07-27  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libAux: Version 1.6.0

	* Makefile.inc (Repository): Remove CyrMoney and cgi modules from
	library.
	
	* Makefile.gcc (Repository): provide workaround for
	bug in GNU make 3.79*---it foget old value of variable when
	tag-dependent variable use += operator, if includes of makefiles
	is too deep---near deepth of 3. This influence to libraries building.